src/test/deca/context/valid/objet/ident_class_01.deca
// Description:
//   Ident class decl
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023


class _class {

}