src/test/deca/context/invalid/objet/method_parameter_void.deca
// Description:
//     Void method argument.
//
// Resultats:
//    Error
//
// Historique:
//    cree le 01/01/2023

class A{
    int getX(void x){

    }
}


